--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div style="margin: 5px; width: 100%;display: flex;">
   <button type="button" onclick="loadAll()">Re-Load</button>
-  <input id="tickers" style="margin-left: 5px; width: 90%" value="BTCUSDT,ETHUSDT,XRPUSDT,DOGEUSDT,LTCUSDT,ADAUSDT,BCHUSDT,EOSUSDT,DOTUSDT,TRXUSDT,LINKUSDT,FILUSDT"></input>
+  <input id="tickers" style="margin-left: 5px; width: 90%" value="ETHUSDT,BTCUSDT,XRPUSDT,DOGEUSDT,LTCUSDT,ADAUSDT,BCHUSDT,EOSUSDT,DOTUSDT,TRXUSDT,LINKUSDT,FILUSDT"></input>
   </div>
   <div id="items" style="display: flex; flex-wrap: wrap;"></div>
   <script type="text/javascript">
